# Distributed-DataFeed-Handler

./: .gitignore  Distributed-DataFeed-Handler.sln  README.md
Distributed-DataFeed-Handler.Server/: Distributed-DataFeed-Handler.Server.csproj  Distributed-DataFeed-Handler.Server.http  Distributed-DataFeed-Handler.Server.slnx  WeatherForecast.cs
Distributed-DataFeed-Handler.Server/Controllers/: WeatherForecastController.cs
Distributed-DataFeed-Handler.Server/Distributed-DataFeed-Handler.Application/: ChannelService.cs  Distributed-DataFeed-Handler.Application.csproj  OrderBooks.json  Program.cs
Distributed-DataFeed-Handler.Server/Distributed-DataFeed-Handler.Server/: Chathub.cs  Distributed-DataFeed-Handler.Server.csproj  Parser.cs  Program.cs  StreamHub.cs
Distributed-DataFeed-Handler.Server/Distributed-DataFeed-Handler.Server/Properties/: launchSettings.json
Distributed-DataFeed-Handler.Server/Properties/: launchSettings.json
Market-Data-Feed-Handler/: CMakeLists.txt  README.md
Market-Data-Feed-Handler/alpaca/: CMakeLists.txt  alpaca.cpp  alpaca.hpp  alpaca_ws.cpp  alpaca_ws.hpp
distributed-datafeed-handler.client/: CHANGELOG.md  index.html  package-lock.json  package.json
